fix: name des assistenten

--- a/docs/de-de/modules/payment/pages/lastschrift.adoc
+++ b/docs/de-de/modules/payment/pages/lastschrift.adoc
@@ -15,7 +15,7 @@ Auf dieser Seite geht es um die *Zahlungsart Lastschrift* und nicht das SEPA-Las
 :name-des-assistenten: Lastschrift
 :name-der-zahlungsart: Lastschrift
 
-include::_includes:page$ausfuehrung-assistent-zahlungsart.adoc[]
+include::_includes:partial$assistant-payment-processing.adoc[]
 
 [#30]
 == Kundenklassen und Versandprofile
