--- a/docs/de-de/modules/payment/pages/barzahlung.adoc
+++ b/docs/de-de/modules/payment/pages/barzahlung.adoc
@@ -13,7 +13,7 @@ Die Erklärungen auf dieser Seite finden nach dem Hinzufügen des Plugins Anwend
 :name-des-assistenten: Barzahlung
 :name-der-zahlungsart: Barzahlung
 
-include::_includes:page$ausfuehrung-assistent-zahlungsart.adoc[]
+include::_includes:partial$assistant-payment-processing.adoc[]
 
 [#30]
 == Kundenklassen und Versandprofile
