--- a/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
@@ -195,7 +195,7 @@ You can position areas for content and elements on the dashboard intuitively via
 :menu-path: pass:quotes[*plentymarkets logo (Start) » Dashboard*]
 :edit-object: dashboard contents
 
-include::_includes:page$myview-editing-mode.adoc[]
+include::_includes:partial$myview-editing-mode.adoc[]
 
 [#408]
 === Assigning rights for dashboard views
