--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -201,7 +201,7 @@ Darstellungsbereiche und Elemente kannst du intuitiv per Drag-and-Drop auf dem D
 :menu-path: pass:quotes[*plentymarkets Logo (Start) » Dashboard*]
 :edit-object: Inhalte eines Dashboards
 
-include::_includes:page$myview-editing-mode.adoc[]
+include::_includes:partial$myview-editing-mode.adoc[]
 
 [#408]
 === Rechte für Dashboard-Ansichten vergeben
