fix: overview customise

--- a/docs/de-de/modules/_includes/partials/overview-customise.adoc
+++ b/docs/de-de/modules/_includes/partials/overview-customise.adoc
@@ -8,7 +8,7 @@ Beispiel:
 :arrows:
 :include-list-of-columns: include::artikel:partial$item-overview-columns.adoc[]
 
-include::_includes:pages$overview-customise.adoc[]
+include::_includes:page$overview-customise.adoc[]
 ////
 
 === Übersicht individuell gestalten
