fix: rights purpose

--- a/docs/de-de/modules/automatisierung/pages/prozesse-ausfuehren.adoc
+++ b/docs/de-de/modules/automatisierung/pages/prozesse-ausfuehren.adoc
@@ -23,7 +23,7 @@ Gehe wie unten beschrieben vor, um einen Prozess auszuführen. Beachte, dass nur
 :right-one: pass:quotes[*Prozesse > Anzeigen*]
 :right-two: pass:quotes[*Prozesse > Bearbeiten*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.instruction]
 Prozess ausführen:
