--- a/docs/de-de/modules/crm/pages/e-mails-versenden.adoc
+++ b/docs/de-de/modules/crm/pages/e-mails-versenden.adoc
@@ -32,7 +32,7 @@ video::211643476[vimeo, width=640, height=360]
 :right-six: pass:quotes[*CRM > E-Mail > Vorlagen bearbeiten*]
 :right-seven: pass:quotes[*CRM > E-Mail > Zugangsdaten bearbeiten*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 
 [#100]
