--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -48,7 +48,7 @@ In den folgenden Unterkapiteln wird beschrieben, welche vorbereitenden Einstellu
 :right-seven: pass:quotes[*CRM > E-Mail > Zugangsdaten bearbeiten*]
 :right-eight: pass:quotes[im Bereich *Menü-Sichtbarkeiten*: *CRM > EmailBuilder*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#e-mail-server-zugangsdaten]
 === E-Mail-Server-Zugangsdaten speichern
