--- a/docs/de-de/modules/crm/pages/kontakte-verwalten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakte-verwalten.adoc
@@ -34,7 +34,7 @@ Im Menü *Einrichtung » CRM » Adress-Layout* kannst du individuell Adress-Layo
 :right-two: pass:quotes[*CRM > Adress-Layout > Erstellen*]
 
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 
 [TIP]
@@ -387,7 +387,7 @@ Rabatt für alle Artikel eines Auftrags eingeben:
 :right-four: pass:quotes[*Einrichtung > Tag > Anzeigen*]
 
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 
 
