--- a/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
+++ b/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
@@ -88,7 +88,7 @@ Neues Adress-Layout im Lieferschein aktivieren:
 :right-two: pass:quotes[*CRM > Adress-Layout > Erstellen*]
 :right-three: pass:quotes[*CRM > Adress-Layout > Aktualisieren*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#rechte-vergeben]
 == Rechte für Backend-Benutzer:innen vergeben
@@ -99,7 +99,7 @@ include::_includes:page$rechte.adoc[]
 :right-three: pass:quotes[*Einrichtung > Eigenschaft > Anzeigen*]
 :right-four: pass:quotes[*Einrichtung > Tag > Anzeigen*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#rechte-freigeben-bereiche-schaltflaechen]
 === Rechte für bestimmte Bereiche und Schaltflächen im Kontaktdatensatz freigeben
