--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -720,7 +720,7 @@ Lerne, wie du vorhandene Importe verwaltest.
 :right-eight: pass:quotes[*Daten > Sync > Zuordnung > Löschen*]
 :right-nine: pass:quotes[*Daten > Daten-Log*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#1730]
 === Ältere/gelöschte Importe wiederherstellen
