--- a/docs/de-de/modules/daten/partials/catalogues-manage.adoc
+++ b/docs/de-de/modules/daten/partials/catalogues-manage.adoc
@@ -6,7 +6,7 @@ Lerne, wie du vorhandene Kataloge verwaltest. Diese Informationen gelten für Ma
 :rights-purpose: Kataloge sehen können
 :right-one: pass:quotes[*Daten > Datenaustausch > Export > Katalog > Anzeigen*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#15]
 == Spalten der Katalog-Übersicht anpassen
