--- a/docs/de-de/modules/fulfillment/partials/ebay-fulfillment-by-orange-connex.adoc
+++ b/docs/de-de/modules/fulfillment/partials/ebay-fulfillment-by-orange-connex.adoc
@@ -157,7 +157,7 @@ Wert *25* eingeben, wenn *keine Verschlüsselung* verwendet wird. +
 :right-two: pass:quotes[*Aufträge > Auftragsstatus > Anzeigen*]
 :right-three: pass:quotes[*Aufträge > Auftragsstatus > Aktualisieren*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#einstellungen-assistent]
 == Einstellungen im Assistenten
