--- a/docs/de-de/modules/maerkte/pages/eBay-feedback.adoc
+++ b/docs/de-de/modules/maerkte/pages/eBay-feedback.adoc
@@ -187,4 +187,4 @@ Eigner:innenrechte für Ticketsystem vergeben:
 :right-one: pass:quotes[*Menü-Sichtbarkeiten > Einstellungen > Märkte > eBay > Feedback*]
 :right-two: pass:quotes[*Menü-Sichtbarkeiten > CRM » Ticketsystem*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
