--- a/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/ebay-einrichten.adoc
@@ -118,7 +118,7 @@ Im Menü *Einrichtung » Märkte » eBay » Konten » OAuth2* hast du die Mögli
 :right-two: pass:quotes[*Berechtigungen > Märkte > eBay > Marktplatz > Anzeigen*]
 
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#500]
 === eBay-Shop-Kategorien laden
