--- a/docs/de-de/modules/maerkte/pages/etsy.adoc
+++ b/docs/de-de/modules/maerkte/pages/etsy.adoc
@@ -409,7 +409,7 @@ Retouren, Gutschriften und Stornierungen für Etsy-Aufträge können nicht über
 :rights-purpose: das Etsy-Plugin nutzen können
 :right-one: pass:quotes[*Berechtigungen > Märkte > Zugangsdaten*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#faq]
 == Fehlermeldungen
