--- a/docs/de-de/modules/warenwirtschaft/pages/lager-einrichten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/lager-einrichten.adoc
@@ -24,7 +24,7 @@ Jedes plentymarkets System hat zu Beginn 2 Beispiellager: ein Vertriebslager (KS
 :rights-purpose: mit Lagern arbeiten können
 :right-one: pass:quotes[*Warenbestände > Lager > Bearbeiten*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#100]
 == Lager planen
@@ -242,7 +242,7 @@ Generiere Lagerorte, um die tatsächlichen Plätze zum Lagern deiner Ware angebe
 :right-two: pass:quotes[*Warenbestände > Lager > Lagerort > Anzeigen*]
 :right-three: pass:quotes[*Warenbestände > Lager > Lagerort > Erstellen*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.instruction]
 Lagerorte generieren:
