--- a/docs/de-de/modules/warenwirtschaft/pages/mhd-charge-verwalten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mhd-charge-verwalten.adoc
@@ -40,7 +40,7 @@ In diesem Fall wird die Variante von Artikel 1 zuerst gepickt, da dort kein MHD 
 :rights-purpose: MHD/Chargen sehen können
 :right-one: pass:quotes[*Warenbestände > Lagerort-Verwaltung > Anzeigen*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#200]
 == Wareneingang
