--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -67,7 +67,7 @@ Bevor Picklisten mit plentyWarehouse abgearbeitet werden, muss sichergestellt se
 :right-two: pass:quotes[*Aufträge > Fulfillment > Pickliste > Bearbeiten*]
 :right-three: pass:quotes[*Aufträge > Fulfillment > Pickliste > Löschen*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#300]
 == Picklisten bearbeiten
