--- a/docs/de-de/modules/webshop/pages/shop-builder.adoc
+++ b/docs/de-de/modules/webshop/pages/shop-builder.adoc
@@ -29,7 +29,7 @@ Um vollständig auf den ShopBuilder zugreifen zu können, benötigst du die folg
 :right-two: pass:quotes[*Plugins*]
 :right-three: pass:quotes[*Einrichtung » Assistenten*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#content-manager]
 == Der Content Manager des ShopBuilders
