--- a/docs/en-gb/modules/automation/pages/carrying-out-processes.adoc
+++ b/docs/en-gb/modules/automation/pages/carrying-out-processes.adoc
@@ -23,7 +23,7 @@ Proceed as described below to run a process. Note that you can only see those pr
 :right-one: pass:quotes[*Processes > Edit*]
 :right-two: pass:quotes[*Processes > Show*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.instruction]
 Running a process:
