--- a/docs/en-gb/modules/automation/pages/procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/procedures.adoc
@@ -1377,7 +1377,7 @@ For the **Pick list search** procedure to work correctly if a process containing
 :right-one: pass:quotes[*Orders > Fulfilment > Pick list > Show*]
 :right-two: pass:quotes[*Orders > Fulfilment > Pick list > Edit*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.subhead]
 Work steps
@@ -2197,7 +2197,7 @@ For the *Single incoming item* procedure to work correctly if a process containi
 :rights-purpose: pass:quotes[execute the *Single incoming item* procedure]
 :right-one: pass:quotes[*Items > Item > Variation > Supplier data > Show*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.subhead]
 Work steps
