--- a/docs/en-gb/modules/automation/pages/setting-up-processes.adoc
+++ b/docs/en-gb/modules/automation/pages/setting-up-processes.adoc
@@ -68,7 +68,7 @@ The folders in the menu *Setup » Processes* are only visible to users who are a
 :right-one: pass:quotes[*Processes > Edit*]
 :right-two: pass:quotes[*Processes > Show*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [[table-visibility-processes]]
 .Folder structure for processes
