--- a/docs/en-gb/modules/crm/pages/managing-contacts.adoc
+++ b/docs/en-gb/modules/crm/pages/managing-contacts.adoc
@@ -33,7 +33,7 @@ In the *Setup » CRM » Address layout* menu, you can individually set up addres
 :right-two: pass:quotes[*CRM > Address layout > Create*]
 
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 
 [TIP]
@@ -386,7 +386,7 @@ Entering a discount for all items of an order:
 :right-three: pass:quotes[*Setup > Property > Show*]
 :right-four: pass:quotes[*Setup > Tag > Show*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#90]
 == Managing contacts and companies
