--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -50,7 +50,7 @@ If users of the type *Back end* should be able to work with the messenger, a per
 :right-five: pass:quotes[*Setup > Tag > Show*]
 :right-six: pass:quotes[*Setup > Tag > Create*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#tags-messenger]
 === Creating tags for the messenger
