--- a/docs/en-gb/modules/crm/pages/messenger.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger.adoc
@@ -26,7 +26,7 @@ If users of the type *Back end* should be able to work with the messenger, you a
 :right-seven: pass:quotes[*Setup > Tag > Show*]
 :right-eight: pass:quotes[*Setup > Tag > Create*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#tags-messenger]
 === Creating tags for the messenger
