--- a/docs/en-gb/modules/crm/pages/preparatory-settings.adoc
+++ b/docs/en-gb/modules/crm/pages/preparatory-settings.adoc
@@ -88,7 +88,7 @@ Activating the new address layout for delivery notes:
 :right-two: pass:quotes[*CRM > Address layout > Create*]
 :right-three: pass:quotes[*CRM > Address layout > Update*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#assign-rights]
 == Assigning rights for back end users
@@ -99,7 +99,7 @@ include::_includes:page$rights.adoc[]
 :right-three: pass:quotes[*Setup > Property > Show*]
 :right-four: pass:quotes[*Setup > Tag > Show*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#activate-rights-areas-buttons]
 === Activating rights for certain areas and buttons in the contact data record
