--- a/docs/en-gb/modules/crm/pages/using-the-ticket-system.adoc
+++ b/docs/en-gb/modules/crm/pages/using-the-ticket-system.adoc
@@ -50,7 +50,7 @@ Go to *Setup » Settings » User » Account » [Open user]* and activate the own
 :right-four: pass:quotes[*CRM > Ticket > Create*]
 :right-five: pass:quotes[*CRM > Ticket > Delete*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 Refer to the chapter xref:crm:using-the-ticket-system.adoc#650[Assigning rights for back end users for roles, statuses and types] to learn which rights an *Admin* user has to assign to a *Back end* user in order that the back end user can work with roles, ticket statuses and ticket types.
 
@@ -181,7 +181,7 @@ Select *Delete* if you do not want to save the emails. The emails are deleted af
 :right-eight: pass:quotes[*CRM > Ticket > Ticket type > Show*]
 :right-nine: pass:quotes[*CRM > Ticket > Ticket type > Create*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#700]
 === Adding a role
