--- a/docs/en-gb/modules/data/pages/ElasticSync.adoc
+++ b/docs/en-gb/modules/data/pages/ElasticSync.adoc
@@ -20,7 +20,7 @@ This manual page describes how to import data using the import tool. Importing d
 :right-eight: pass:quotes[*Data > Sync > Mapping > Update*]
 :right-nine: pass:quotes[*Data > Data log*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#1700]
 == Importing data with assistants
