--- a/docs/en-gb/modules/data/partials/catalogues-manage.adoc
+++ b/docs/en-gb/modules/data/partials/catalogues-manage.adoc
@@ -6,7 +6,7 @@ Learn how to manage existing catalogues. This information applies to both market
 :rights-purpose: see catalogues
 :right-one: pass:quotes[*Data > Data exchange > Export > Catalogue > Show*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#15]
 == Customizing catalogue overview columns
