--- a/docs/en-gb/modules/markets/pages/eBay-feedback.adoc
+++ b/docs/en-gb/modules/markets/pages/eBay-feedback.adoc
@@ -188,4 +188,4 @@ Setting owner rights for the ticket system:
 :right-one: pass:quotes[*Menu visibilities > Settings > Markets > eBay > Feedback*]
 :right-two: pass:quotes[*Menu visibilities > CRM » Ticket system*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
