--- a/docs/en-gb/modules/markets/pages/ebay-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/ebay-setup.adoc
@@ -118,7 +118,7 @@ Go to *Setup » Markets » eBay » Accounts » OAuth2* to rename, update or dele
 :right-two: pass:quotes[*Rights > Markets > eBay > Marketplace > Display*]
 
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#500]
 === Loading eBay shop categories
