--- a/docs/en-gb/modules/markets/pages/etsy.adoc
+++ b/docs/en-gb/modules/markets/pages/etsy.adoc
@@ -409,7 +409,7 @@ Returns, credit notes and cancellations for Etsy orders cannot be processed in p
 :rights-purpose: use the Etsy plugin
 :right-one: pass:quotes[*Authorisations > Markets > Credentials*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#faq]
 == Error messages
