--- a/docs/en-gb/modules/online-store/pages/setting-up-ceres.adoc
+++ b/docs/en-gb/modules/online-store/pages/setting-up-ceres.adoc
@@ -28,7 +28,7 @@ When both plugins are deployed in a plugin set, you can begin setting up your pl
 :right-two: pass:quotes[*Plugins*]
 :right-three: pass:quotes[*Setup » Assistants*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 
 [#240]
