--- a/docs/en-gb/modules/online-store/pages/shop-builder.adoc
+++ b/docs/en-gb/modules/online-store/pages/shop-builder.adoc
@@ -29,7 +29,7 @@ To access all of ShopBuilder’s features, you require the following user rights
 :right-two: pass:quotes[*Plugins*]
 :right-three: pass:quotes[*Setup > Assistants*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#content-manager]
 == Shopbuilder’s content manager
