--- a/docs/en-gb/modules/pos/pages/integrating-plentymarkets-pos.adoc
+++ b/docs/en-gb/modules/pos/pages/integrating-plentymarkets-pos.adoc
@@ -478,7 +478,7 @@ Now assign rights for the communication between plentyPOS and the plentymarkets 
 :right-seven: pass:quotes[*Orders > Create*]
 :right-eight: pass:quotes[*Stock > Warehouses > Warehouse location > Show*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#160]
 === Activating POS visibility for POS users
@@ -1477,7 +1477,7 @@ Users with admin rights are able to create multipurpose coupons by default. *Bac
 :right-two: pass:quotes[*CRM > Campaign > Code > Create*]
 :right-three: pass:quotes[*CRM > Campaign > Code > Delete*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#2710]
 === Notes on selling multipurpose coupons
@@ -1739,7 +1739,7 @@ Users with admin rights are able to create refund coupons by default. *Backend* 
 :right-two: pass:quotes[*CRM > Campaign > Code > Create*]
 :right-three: pass:quotes[*CRM > Campaign > Code > Delete*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#3500]
 ==== Additional information for refunds with coupons
