--- a/docs/en-gb/modules/pos/pages/pos-legal-compliance.adoc
+++ b/docs/en-gb/modules/pos/pages/pos-legal-compliance.adoc
@@ -29,7 +29,7 @@ You can export the POS transactions shown in the cash journal to a PDF or CSV fi
 :rights-purpose: exporting POS transactions as PDF or CSV files
 :right-one: pass:quotes[*Orders > POS > Cash journal*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.instruction]
 Exporting POS transactions to PDF or CSV files:
@@ -138,7 +138,7 @@ German tax laws stipulate that you need to document all POS data and provide acc
 :rights-purpose: create IDEA exports
 :right-one: pass:quotes[*Orders > POS > IDEA export*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.instruction]
 Exporting the IDEA files:
@@ -272,7 +272,7 @@ Proceed as described below to download TSE export files.
 :rights-purpose: download TSE exports
 :right-one: pass:quotes[*Orders > POS > TSE export*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.instruction]
 Download TSE exports:
@@ -390,7 +390,7 @@ In case of an inspection carried out by tax authorities, every POS user must be 
 :rights-purpose: create DSFinV-K exports
 :right-one: pass:quotes[*Orders > POS > DSFinV-K export*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.instruction]
 Creating a DSFinV-K export:
@@ -558,7 +558,7 @@ You must be able to export the DEP of a POS to an external disk and hand it over
 :rights-purpose: create DEP exports
 :right-one: pass:quotes[*Orders > POS > DEP export*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.instruction]
 Exporting the DEP files:
