--- a/docs/en-gb/modules/stock-management/pages/box-picking.adoc
+++ b/docs/en-gb/modules/stock-management/pages/box-picking.adoc
@@ -78,7 +78,7 @@ Before box picking is carried out in plentyWarehouse, make sure that all users h
 :right-four: pass:quotes[*Comments > Show*]
 :right-five: pass:quotes[*Comments > Create*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#600]
 ==== Modifying the order process
