--- a/docs/en-gb/modules/stock-management/pages/carrying-out-stocktaking.adoc
+++ b/docs/en-gb/modules/stock-management/pages/carrying-out-stocktaking.adoc
@@ -115,7 +115,7 @@ Before stocktaking is carried out in plentyWarehouse, make sure that all users h
 :right-one: pass:quotes[*Stock > Warehouses > Warehouse location > Show*]
 :right-two: pass:quotes[*Stock > Warehouses > Warehouse location > Warehouse location level > Create*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#300]
 == Taking stock
@@ -184,7 +184,7 @@ If necessary, start by assigning the appropriate user rights to employees that s
 :rights-purpose: can create inventory log exports
 :right-one: pass:quotes[*Stock > Stocktaking > Inventory log export*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#700]
 === Exporting the inventory log
