--- a/docs/en-gb/modules/stock-management/pages/items-and-storage-locations.adoc
+++ b/docs/en-gb/modules/stock-management/pages/items-and-storage-locations.adoc
@@ -219,7 +219,7 @@ Users have to be assigned the appropriate rights to make sure that they can sear
 :rights-purpose: search for and inspect storage locations in plentyWarehouse
 :right-one: pass:quotes[*Stock > Warehouses > Warehouse location > Show*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.instruction]
 Searching for and inspecting storage locations:
