--- a/docs/en-gb/modules/stock-management/pages/new-incoming-items.adoc
+++ b/docs/en-gb/modules/stock-management/pages/new-incoming-items.adoc
@@ -114,7 +114,7 @@ There are several ways to book incoming items, e.g. by using the plentymarkets a
 :right-one: pass:quotes[*Stock > Incoming items > Show*]
 :right-two: pass:quotes[*Stock > New incoming items > Show*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#500]
 === Recording incoming items
