--- a/docs/en-gb/modules/stock-management/pages/redistributing-items.adoc
+++ b/docs/en-gb/modules/stock-management/pages/redistributing-items.adoc
@@ -100,7 +100,7 @@ Before items are redistributed in plentyWarehouse, make sure that all users have
 :right-one: pass:quotes[*Items > Item > Variation > Warehouse data > Show*]
 :right-two: pass:quotes[*Stock > Warehouses > Warehouse location > Show*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#200]
 == Redistributing items
