--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -1377,7 +1377,7 @@ Damit die Aktion **Picklisten-Suche** korrekt funktioniert, wenn Benutzer:innen 
 :right-one: pass:quotes[*Aufträge > Fulfillment > Picklisten > Anzeigen*]
 :right-two: pass:quotes[*Aufträge > Fulfillment > Picklisten > Bearbeiten*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.subhead]
 Arbeitsschritte
@@ -2197,7 +2197,7 @@ Damit die Aktion *Wareneingang (einfach)* korrekt funktioniert, wenn Benutzer:in
 :rights-purpose: pass:quotes[die Aktion *Wareneingang (einfach)* ausführen können]
 :right-one: pass:quotes[*Artikel > Artikel > Variante > Lieferantendaten > Anzeigen*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.subhead]
 Arbeitsschritte
