--- a/docs/de-de/modules/pos/pages/pos-rechtssicherheit.adoc
+++ b/docs/de-de/modules/pos/pages/pos-rechtssicherheit.adoc
@@ -29,7 +29,7 @@ Die im Kassenjournal angezeigten Kassenvorgänge kannst du entweder als PDF-Date
 :rights-purpose: Kassenvorgänge als PDF- oder CSV-Datei exportieren können
 :right-one: pass:quotes[*Aufträge > POS > Kassenjournal*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.instruction]
 Kassenvorgänge als PDF- oder CSV-Datei exportieren:
@@ -138,7 +138,7 @@ Laut den deutschen handels- und steuerrechtlichen Ordnungsvorschriften (GoBD) mu
 :rights-purpose: IDEA-Exporte erstellen können
 :right-one: pass:quotes[*Aufträge > POS > IDEA-Export*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.instruction]
 IDEA-Dateien exportieren:
@@ -272,7 +272,7 @@ Gehe wie unten beschrieben vor, um TSE-Exportdateien herunterzuladen.
 :rights-purpose: TSE-Exporte herunterladen können
 :right-one: pass:quotes[*Aufträge > POS > TSE-Export*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.instruction]
 TSE-Exporte herunterladen:
@@ -390,7 +390,7 @@ Im Fall einer Prüfung durch die Finanzbehörden muss jede Kassenkraft in der La
 :rights-purpose: DSFinV-K-Exporte erstellen können
 :right-one: pass:quotes[*Aufträge > POS > DSFinV-K-Export*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.instruction]
 DSFinV-K-Export erstellen:
@@ -558,7 +558,7 @@ Das DEP einer Registrierkasse muss dabei auf Verlangen jederzeit auf einen exter
 :rights-purpose: DEP-Exporte erstellen können
 :right-one: pass:quotes[*Aufträge > POS > DEP-Export*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [.instruction]
 DEP-Dateien exportieren:
