--- a/docs/de-de/modules/warenwirtschaft/pages/artikel-umbuchen.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/artikel-umbuchen.adoc
@@ -100,7 +100,7 @@ Bevor eine Umbuchung mit plentyWarehouse durchgeführt wird, muss sichergestellt
 :right-one: pass:quotes[*Artikel > Artikel > Variante > Lagerdaten > Anzeigen*]
 :right-two: pass:quotes[*Warenbestände > Lager > Lagerort > Anzeigen*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#200]
 == Artikel umbuchen
