--- a/docs/de-de/modules/warenwirtschaft/pages/wareneingaenge-verwalten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/wareneingaenge-verwalten.adoc
@@ -126,7 +126,7 @@ Du hast verschiedene Möglichkeiten, einen Wareneingang zu buchen, z.B. per App,
 :right-one: pass:quotes[*Warenbestände > Wareneingänge > Anzeigen*]
 :right-two: pass:quotes[*Warenbestände > Neuer Wareneingang > Anzeigen*]
 
-include::_includes:page$rechte.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#500]
 === Wareneingang erfassen
