--- a/docs/en-gb/modules/_includes/pages/tags-rights.adoc
+++ b/docs/en-gb/modules/_includes/pages/tags-rights.adoc
@@ -1,4 +1,4 @@
 :rights-purpose: be able to work with tags
 :right-one: pass:quotes[*Setup > Tag*]
 
-include::page$rights.adoc[]
+include::partial$rights.adoc[]
