--- a/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
@@ -147,7 +147,7 @@ Do you want to allow employees without admin access to your system to create key
 :rights-purpose: can create key figures
 :right-one: pass:quotes[*plentyBI > Key figures*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#400]
 == Setting up a dashboard view
