--- a/docs/en-gb/modules/crm/pages/companies.adoc
+++ b/docs/en-gb/modules/crm/pages/companies.adoc
@@ -25,7 +25,7 @@ image::crm:company-ui-menu-structure.png[width=640, height=360]
 :right-three: pass:quotes[*CRM > Company > Create*]
 :right-four: pass:quotes[*CRM > Company > Delete*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#create-company]
 == Creating a company
