--- a/docs/en-gb/modules/fulfilment/pages/plugin-dhl-shipping-versenden.adoc
+++ b/docs/en-gb/modules/fulfilment/pages/plugin-dhl-shipping-versenden.adoc
@@ -577,7 +577,7 @@ For further information, refer to the link:https://www.dhl.de/en/geschaeftskunde
 :right-five: pass:quotes[*Orders > Order properties > Show*]
 :right-six: pass:quotes[*Orders > Documents > Create*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [IMPORTANT]
 .*Ship* function in the DHL business customer portal
