--- a/docs/en-gb/modules/online-store/pages/setting-up-io.adoc
+++ b/docs/en-gb/modules/online-store/pages/setting-up-io.adoc
@@ -22,7 +22,7 @@ After these preparations, go to *Plugins » Plugin overview* and click on the pl
 :right-two: pass:quotes[*Plugins*]
 :right-three: pass:quotes[*Setup » Assistants*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#20]
 == Editing IO settings
