--- a/docs/en-gb/modules/stock-management/pages/reshelving-items.adoc
+++ b/docs/en-gb/modules/stock-management/pages/reshelving-items.adoc
@@ -131,7 +131,7 @@ Before items are reshelved in plentyWarehouse, make sure that all users have bee
 :right-one: pass:quotes[*Items > Item > Variation > Warehouse data > Show*]
 :right-two: pass:quotes[*Stock > Warehouses > Warehouse location > Show*]
 
-include::_includes:page$rights.adoc[]
+include::_includes:partial$rights.adoc[]
 
 [#300]
 == Reshelving items
