fix: unescaped strings
- Dokumenttyp
- Dokument type
- xxx

--- a/docs/en-gb/modules/automation/pages/faq.adoc
+++ b/docs/en-gb/modules/automation/pages/faq.adoc
@@ -56,7 +56,7 @@ Resolving the error:
 [#300]
 == Error message “Document not saved”
 
-Sometimes, the error `{Document type} not saved: No documents available. Relevant IDs: {xxx}` occurs. Proceed as described below to resolve the error.
+Sometimes, the error `\{Document type\} not saved: No documents available. Relevant IDs: \{xxx\}` occurs. Proceed as described below to resolve the error.
 
 [.instruction]
 Create temp and cache folder:
@@ -85,7 +85,7 @@ If this error message persists or if you would like to discontinue box picking, 
 [#500]
 == Error message “Documents not saved”
 
-If the error message `Documents not saved. No order data available. Relevant IDs: {xxx}` occurs, you should check if the shipping service provider that the process should register the shipment with is linked with the order.
+If the error message `Documents not saved. No order data available. Relevant IDs: \{xxx\}` occurs, you should check if the shipping service provider that the process should register the shipment with is linked with the order.
 
 This error message occurs if e.g. the shipping service provider Hermes is saved for the order, while the process tries to register the order for shipment with DHL.
 
