--- a/docs/de-de/modules/automatisierung/pages/FAQ.adoc
+++ b/docs/de-de/modules/automatisierung/pages/FAQ.adoc
@@ -56,7 +56,7 @@ Fehler beheben:
 [#300]
 == Fehlermeldung "Dokument nicht gespeichert"
 
-Manchmal tritt der Fehler `{Dokumenttyp} nicht gespeichert: Keine Dokumente verfügbar. Betroffene IDs: {xxx}` auf. Gehe wie unten beschrieben vor, um den Fehler zu beheben.
+Manchmal tritt der Fehler `\{Dokumenttyp\} nicht gespeichert: Keine Dokumente verfügbar. Betroffene IDs: \{xxx\}` auf. Gehe wie unten beschrieben vor, um den Fehler zu beheben.
 
 [.instruction]
 Temp- und Cache-Ordner erstellen:
@@ -85,7 +85,7 @@ Wenn die Fehlermeldung weiterhin auftritt oder wenn du die angefangene Box-Kommi
 [#500]
 == Fehlermeldung "Versandetiketten nicht gespeichert"
 
-Wenn die Fehlermeldung `Versandetiketten nicht gespeichert. Keine Auftragsdaten vorhanden. Betroffene IDs: {xxx}` auftritt, solltest du prüfen, ob am Auftrag der Versanddienstleister hinterlegt ist, mit dem du den Auftrag über den Prozess versenden möchtest.
+Wenn die Fehlermeldung `Versandetiketten nicht gespeichert. Keine Auftragsdaten vorhanden. Betroffene IDs: \{xxx\}` auftritt, solltest du prüfen, ob am Auftrag der Versanddienstleister hinterlegt ist, mit dem du den Auftrag über den Prozess versenden möchtest.
 
 Diese Fehlermeldung tritt auf, wenn zum Beispiel am Auftrag der Versanddienstleister Hermes hinterlegt ist und im Prozess wird versucht, den Auftrag mit DHL zu verschicken.
 
