--- a/docs/de-de/modules/changelog/pages/2020-06-30.adoc
+++ b/docs/de-de/modules/changelog/pages/2020-06-30.adoc
@@ -111,7 +111,7 @@ Folgende Probleme wurden in den letzten 7 Tagen auf *stable* behoben.
 [discrete]
 === bol.com
 
-* Bei der Versandmeldung an bol.com per Ereignisaktion kam es zu der Fehlermeldung `PUT-HTTP-Anfrage an den Endpoint orders/{order-item-id}/shipment fehlgeschlagen mit Fehlercode 400: „Bad Request“.`. Der Fehler trat abhängig von der Version ab folgendem Zeitpunkt auf:
+* Bei der Versandmeldung an bol.com per Ereignisaktion kam es zu der Fehlermeldung `PUT-HTTP-Anfrage an den Endpoint orders/\{order-item-id\}/shipment fehlgeschlagen mit Fehlercode 400: „Bad Request“.`. Der Fehler trat abhängig von der Version ab folgendem Zeitpunkt auf:
 ** beta - 12.06.2020
 ** early - 17.06.2020
 ** stable - 25.06.2020
