--- a/docs/de-de/modules/changelog/pages/2020-07-15.adoc
+++ b/docs/de-de/modules/changelog/pages/2020-07-15.adoc
@@ -275,7 +275,7 @@ App::
 
 Folgende Änderungen wurden in Version 1.10.2 der *plentymarkets App* veröffentlicht.
 
-* Der QR-Code zum digitalen Belegabruf im Kundendisplay verweist nun nicht mehr auf die URL *{domain}/receipt2go*, sondern auf *{domain}/rest/store/pos/receipt2go*.
+* Der QR-Code zum digitalen Belegabruf im Kundendisplay verweist nun nicht mehr auf die URL *\{domain\}/receipt2go*, sondern auf *\{domain\}/rest/store/pos/receipt2go*.
 
 [discrete]
 == Behoben
