--- a/docs/de-de/modules/changelog/pages/2022-02-23.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-02-23.adoc
@@ -64,9 +64,9 @@ Weitere Informationen dazu findest du in link:https://forum.plentymarkets.com/t/
 
 * Die folgenden REST-Routen können Variantennummer anstelle von Varianten-ID verwenden:
 ** /rest/stockmanagement/stock/redistribute
-** /rest/stockmanagement/warehouses/{warehouseId}/stock/bookIncomingItems
-** /rest/stockmanagement/warehouses/{warehouseId}/stock/bookOutgoingItems
-** /rest/stockmanagement/warehouses/{warehouseId}/stock/correction
+** /rest/stockmanagement/warehouses/\{warehouseid\}/stock/bookIncomingItems
+** /rest/stockmanagement/warehouses/\{warehouseid\}/stock/bookOutgoingItems
+** /rest/stockmanagement/warehouses/\{warehouseid\}/stock/correction
 
 '''
 
@@ -102,11 +102,11 @@ Folgende Änderungen wurden in den letzten 7 Tagen auf *stable* veröffentlicht.
 ** /rest/stockmanagement/stock/redistribute
 *** aktuelle Lagerort ID ist jetzt optional
 *** neue Lagerort ID ist jetzt optional
-** /rest/stockmanagement/warehouses/{warehouseId}/stock/bookIncomingItems
+** /rest/stockmanagement/warehouses/\{warehouseid\}/stock/bookIncomingItems
 *** Währung ist jetzt optional
-** /rest/stockmanagement/warehouses/{warehouseId}/stock/bookOutgoingItems
+** /rest/stockmanagement/warehouses/\{warehouseid\}/stock/bookOutgoingItems
 *** Währung ist jetzt optional
-** /rest/stockmanagement/warehouses/{warehouseId}/stock/correction
+** /rest/stockmanagement/warehouses/\{warehouseid\}/stock/correction
 *** ID des Lagerortes ist jetzt optional
 
 '''
