--- a/docs/de-de/modules/changelog/pages/2021-08-25.adoc
+++ b/docs/de-de/modules/changelog/pages/2021-08-25.adoc
@@ -97,7 +97,7 @@ Dies wurde behoben.
 [discrete]
 === REST
 
-* Eine Eingabe von mehr als 32 Zeichen bei dem Feld `numberWithPrefix` der Route: `POST ​/rest​/orders​/{orderId}​/documents​/{type}` hatte zu Fehlern geführt. Das Feld wird jetzt auf diese Länge validiert.
+* Eine Eingabe von mehr als 32 Zeichen bei dem Feld `numberWithPrefix` der Route: `POST ​/rest​/orders​/\{orderid\}​/documents​/{type}` hatte zu Fehlern geführt. Das Feld wird jetzt auf diese Länge validiert.
 
 --
 
