--- a/docs/de-de/modules/changelog/pages/2022-04-27.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-04-27.adoc
@@ -118,7 +118,7 @@ Folgende Probleme wurden in den letzten 7 Tagen auf *{{version}}* behoben.
 === Dokumente
 
 * Es konnte bei der parallelen Generierung von Versandlabels dazu kommen das mehrere Versandpakete das gleiche Label hinterlegt bekamen. Dies wurde behoben.
-* Es konnte zu Performanzproblemen bei der Route `/rest/orders/{orderId}/shipping/packages` kommen. Dies wurde behoben.
+* Es konnte zu Performanzproblemen bei der Route `/rest/orders/\{orderid\}/shipping/packages` kommen. Dies wurde behoben.
 
 [discrete]
 === Ereignisaktionen
