--- a/docs/de-de/modules/payment/pages/sofort.adoc
+++ b/docs/de-de/modules/payment/pages/sofort.adoc
@@ -49,7 +49,7 @@ Sofort-Konto anbinden:
 | *Konfigurationsschlüssel*
 |Den Konfigurationsschlüssel erhältst du nach der link:https://www.sofort.com/payment/users/register[Registrierung^].
 Ohne korrekte Eingabe wird die Zahlungsart nicht aktiviert. +
-Beispiel für den Aufbau des Konfigurationsschlüssels: {Kundennummer}:{Projekt-ID}:{API-Key}
+Beispiel für den Aufbau des Konfigurationsschlüssels: \{Kundennummer\}:\{Projekt-ID\}:\{API-Key\}
 
 |*Auftragsstatus in Status 4/5 setzen*
 |Aktiviere diese Option, wenn Aufträge mit der Zahlungsart *Sofort* nach eingegangener Zahlung im System direkt Auftragsstatus 4 (In Versandvorbereitung) oder 5 (Freigabe Versand) erhalten sollen. Ansonsten werden die Aufträge mit Status 3 (Warten auf Zahlung) angelegt. +
