--- a/docs/en-gb/modules/online-store/pages/shopbuilder-content-widgets.adoc
+++ b/docs/en-gb/modules/online-store/pages/shopbuilder-content-widgets.adoc
@@ -18,6 +18,8 @@ include::plugins:partial$plugin-installieren-en_gb.adoc[]
 
 === Plugin configuration
 
+:plugin: ShopBuilder content widgets
+
 For this plugin to work correctly, you have to set its container links.
 
 [.instruction]
