Fix: rechte.adoc > rights.adoc

--- a/docs/de-de/modules/_includes/pages/tags-rights.adoc
+++ b/docs/de-de/modules/_includes/pages/tags-rights.adoc
@@ -1,4 +1,4 @@
 :rights-purpose: sinnvoll mit Tags arbeiten können
 :right-one: pass:quotes[*Einrichtung > Tag*]
 
-include::partial$rechte.adoc[]
+include::partial$rights.adoc[]
