fix warnings - EN

--- a/docs/en-gb/modules/markets/pages/idealo-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/idealo-setup.adoc
@@ -4,6 +4,8 @@
 :id: JFWN4QY
 :author: team-plenty-channel
 
+:market: idealo
+
 On this page, you will find information about the settings you need to carry out in order to set up the market and price comparison portal idealo Checkout in plentymarkets. Learn how to set up the interface, how to export items to idealo Checkout and how to define sales prices.
 
 [#2300]
