--- a/docs/en-gb/modules/markets/pages/kelkoo.adoc
+++ b/docs/en-gb/modules/markets/pages/kelkoo.adoc
@@ -4,6 +4,7 @@
 :description: Multi-Channel in plentymarkets: Set up the item data export to the price search engine Kelkoo in your plentymarkets system.
 :id: MLKIIIX
 
+:market: Kelkoo
 :price-search-engine: Kelkoo
 :plugin-name: Kelkoo
 :plugin-link: https://marketplace.plentymarkets.com/en/plugins/channels/preisportale/elasticexportkelkoode_5041
