--- a/docs/de-de/modules/business-entscheidungen/pages/nachrichten.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/nachrichten.adoc
@@ -35,6 +35,7 @@ include::partial$summe-minuten.adoc[]
 === Erstellt am
 
 :kennzahl: Die Kennzahl Nachrichten
+:filtered-data: der Nachrichten
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem die Nachrichten erstellt wurden, einbezogen.
 
 include::partial$erstellt-am.adoc[]
