--- a/docs/de-de/modules/daten/pages/marktplatz-formate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/marktplatz-formate-exportieren.adoc
@@ -7,7 +7,7 @@
 
 :marketplace-export:
 
-Mit den Marktplatz-Formaten des Katalogs exportierst du Varianten- und Bestandsdaten an viele Marktplätze und Preisportale.
+Mit den Marktplatz-Formaten des Katalogs exportierst du Variantendaten und Bestandsdaten an viele Marktplätze und Preisportale.
 plentymarkets arbeitet daran, nach und nach alle Marktplätze auf den Katalogexport umzuziehen.
 
 Auf dieser Handbuchseite erfährst du, wie du mit Katalogen Variantendaten an Marktplätze exportierst. Dabei wird nur die allgemeine Vorgehensweise beschrieben.
